Closed
Bug 481769
Opened 16 years ago
Closed 16 years ago
[FIX]Duplicate background image on msnbc.com
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
People
(Reporter: sylvain.pasche, Assigned: bzbarsky)
References
Details
(Keywords: regression, testcase)
Attachments
(2 files)
228 bytes,
text/html
|
Details | |
20.26 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
This is from bug 481719. The "msn" background image on the right of the header on http://www.msnbc.msn.com/ appears twice.
Regression from bug 480979.
Reporter | ||
Comment 1•16 years ago
|
||
Sorry, was from bug 480323 instead.
![]() |
Assignee | |
Comment 2•16 years ago
|
||
Please cc me on regressions I cause, or comment in the relevant bugs or something? I don't see changes to just depends fields.
This is definitely a bug (which webkit trunk also has, but Opera does not, though it looks like Opera has other bugs here).
And note that just putting an 'x' in the testcase after the <div> makes the problem appear in builds from before bug 480323 as well.
We should be treating the ib-special-siblings as continuations for purposes of background painting. I'll look into this tomorrow.
Testcase URIs for now so I can keep track of them (in addition to the attached testcase, which is very much appreciated!):
data:text/html,<!DOCTYPE html><div style="width: 65px"><span style='background: no-repeat url("http://msnbcmedia3.msn.com/i/msnbc/Components/CSS/img/hdr-msn-logo.png")'>a a a a a a a a a a a a a a a</span></div>
data:text/html,<!DOCTYPE html><span style='padding: 11px 0 10px 66px; background: url("http://msnbcmedia3.msn.com/i/msnbc/Components/CSS/img/hdr-msn-logo.png")'><div></div></span>
Assignee: nobody → bzbarsky
![]() |
Assignee | |
Comment 3•16 years ago
|
||
Oh, and:
data:text/html,<!DOCTYPE html><span style='padding: 11px 0 10px 66px; background: url("http://msnbcmedia3.msn.com/i/msnbc/Components/CSS/img/hdr-msn-logo.png")' <div></div>x</span>
![]() |
Assignee | |
Comment 4•16 years ago
|
||
And:
data:text/html,<!DOCTYPE html><span style='padding: 11px 0 10px 66px; background: no-repeat url("http://msnbcmedia3.msn.com/i/msnbc/Components/CSS/img/hdr-msn-logo.png")' <div></div>x</span>
Reporter | ||
Comment 5•16 years ago
|
||
(In reply to comment #2)
> Please cc me on regressions I cause, or comment in the relevant bugs or
> something? I don't see changes to just depends fields.
Ok sorry, I thought the depends field change was visible enough. I'll do that in the future.
![]() |
Assignee | |
Comment 6•16 years ago
|
||
I think it depends on one's mail preferences in bugzilla. I have mine set pretty restrictively, because otherwise I'd be getting 1000+ emails per day from bugzilla alone...
![]() |
Assignee | |
Comment 7•16 years ago
|
||
I'd love to test the bidi stuff too, but have no idea how.
Attachment #365938 -
Flags: superreview?(roc)
Attachment #365938 -
Flags: review?(roc)
![]() |
Assignee | |
Updated•16 years ago
|
Summary: Duplicate background image on msnbc.com → [FIX]Duplicate background image on msnbc.com
Attachment #365938 -
Flags: superreview?(roc)
Attachment #365938 -
Flags: superreview+
Attachment #365938 -
Flags: review?(roc)
Attachment #365938 -
Flags: review+
![]() |
Assignee | |
Comment 8•16 years ago
|
||
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
The testcase is fixed, but how come it's still messed up on msbnc.com? It's not duplicated but seems to be misaligned and split
Reporter | ||
Comment 10•16 years ago
|
||
That can be reproduced when the background is centered:
data:text/html,<!DOCTYPE html><span style='padding: 11px 0 10px 66px; background: url("http://msnbcmedia3.msn.com/i/msnbc/Components/CSS/img/hdr-msn-logo.png") center'><div></div></span>
Comment 11•16 years ago
|
||
Good point. Looks like the webkit trunk also mishandles the URL posted in comment 10. however, Google Chrome 2(beta) displays the msn logo properly on the msnbc.com, unlike minefield.
![]() |
Assignee | |
Comment 12•16 years ago
|
||
> Looks like the webkit trunk also mishandles the URL posted in comment 10.
You need a newer webkit trunk. They fixed some bugs around this stuff a few days back.
Comment 10 basically shows the effects of bug 480452. I should up the priority on that, I guess.
![]() |
Assignee | |
Comment 13•16 years ago
|
||
Pushed http://hg.mozilla.org/mozilla-central/rev/a55ed9d7328a to fix the fact that I was using &&, not &, to test for the NS_FRAME_IS_SPECIAL bit. So we were doing extraneous property gets and GetFirstContinuation() calls here. No functional difference, of course.
Updated•7 years ago
|
Product: Core → Core Graveyard
Updated•7 years ago
|
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•