Bug 481769.  Treat ib special inline siblings as continuations for purposes of background painting.  r+sr=roc